<resources>
    <string name="app_name">Smart Browser</string>
    <string name="app_name_1">Smart</string>
    <string name="app_name_2">Browser</string>
    <string name="confirm">OK</string>
    <string name="cancel">Cancel</string>
    <string name="search">Search</string>
    <string name="translate">Trans</string>
    <string name="copy">Copy</string>
    <string name="sns_sbrowser_caption">Here are my favorites.</string>
    <string name="fb_login_ok">You logged in to Facebook.</string>
    <string name="twitter_login_ok">You logged in to Twitter.</string>
    <string name="twitter_login_fail">You failed to login to Twitter.</string>
    <string name="lockscreen_double_touch">Double\ntouch</string>
    <string name="lockscreen_more_touch">One\nmore!!</string>
    <string name="google">Google</string>
    <string name="settings_short">Set</string>
    <string name="settings_long">Settings</string>
    <string name="saved_cont">Saved</string>
    <string name="exit">Exit</string>
    <string name="exit_notice">Press the exit button one more.</string>
    <string name="home">Home</string>
    <string name="add">Add</string>
    <string name="view">View</string>
    <string name="screen">Scr</string>
    <string name="save">Save</string>
    <string name="expand">Expand</string>
    <string name="select">Select</string>
    <string name="web">Web</string>
    <string name="cont">Article</string>
    <string name="source">Source</string>
    <string name="input_please">Enter here :)</string>
    <string name="confirm_delete">Are you sure you want to delete?</string>
    <string name="favorite_sync_ok">Favorites were out of sync.</string>
    <string name="notice">Notice</string>
    <string name="share">Share</string>
    <string name="share_home_text">You can share your current page with friends on Facebook or Kakaotalk.</string>
    <string name="share_fb_title">Share on Facebook</string>
    <string name="share_twitter_title">Share on Twitter</string>
    <string name="share_kakao_title">Share on KakaoTalk</string>
    <string name="share_web_text">I share this web page.</string>
    <string name="share_fb_ok">Share on Facebook.</string>
    <string name="share_fb_fail">Share on Facebook failed.</string>
    <string name="share_twitter_ok">Share on Twitter.</string>
    <string name="share_twitter_fail">Share on Twitter failed.</string>
    <string name="share_kakao_ok">Share on KakaoTalk.</string>
    <string name="share_kakao_fail">Share on KakaoTalk failed.</string>
    <string name="save_ok">Saved.</string>
    <string name="save_fail">Has not been saved.</string>
    <string name="favorite_add_ok">Favorite is added.</string>
    <string name="select_area">Select area</string>
    <string name="select_area_text">Touch area you will select.</string>
    <string name="left_side">Left</string>
    <string name="right_side">Right</string>
    <string name="bottom_side">Bottom</string>
    <string name="all">All</string>
    <string name="loading">Loading..</string>
    <string name="go">Go</string>
    <string name="input_url_or_searchkey">Please enter a search term or Url.</string>
    <string name="add_favorite">Add favorite</string>
    <string name="add_favorite_part">Add piece</string>
    <string name="mypage">My page</string>
    <string name="sync">Sync</string>
    <string name="reset">Reset</string>
    <string name="remocon_settings">Remocon settings</string>
    <string name="alpha_control">Transparency</string>
    <string name="cont_settings">Article settings</string>
    <string name="select_bg">Select background</string>
    <string name="select_pattern">Select pattern</string>
    <string name="select_color">Select color</string>
    <string name="choose">Choose</string>
    <string name="font_color">Font color</string>
    <string name="font_size">Font size</string>
    <string name="line_space">Line space</string>
    <string name="padding">Padding</string>
    <string name="guide_cont_mode">Easy-to-read on the web page, click the View button and then Article button on the remocon.</string>
    <string name="share_sns">Share SNS</string>
    <string name="input_content">Enter contents.</string>
    <string name="send">Send</string>
    <string name="twitter_login">Twitter login</string>
    <string name="twitter_id">Twitter ID</string>
    <string name="twitter_pw">Twitter Password</string>
    <string name="pw_open">Show password</string>
    <string name="login">Login</string>
    <string name="icon_text">Smart\nBrowser</string>
    <string name="lock_release_double">Touch!</string>
    <string name="lock_release_onemore">OneMore!</string>
    <string name="toast_copy_clipboard">copied to clipboard.</string>
    
    <string name="instructions">Instructions</string>
    <string name="inst_num_1">(1)</string>
    <string name="inst_num_2">(2)</string>
    <string name="inst_num_3">(3)</string>
    <string name="inst_num_4">(4)</string>
    <string name="inst_num_5">(5)</string>
    <string name="inst_num_6">(6)</string>
    <string name="inst_num_7">(7)</string>
    <string name="inst_main1_1">Movable remote control. Placed in a comfortable position.</string>
    <string name="inst_main1_2">Remote control to move / hide / show button. You can change the location by touch of a button, and can show or hide when you click.</string>
    <string name="inst_main1_3">If you enter the url, it shows the web site. If you enter a search term, it show Google search result.</string>
    <string name="inst_main1_4">This button functions vary depending on the situation. On the Home activity, pressing the Google button and go to main Google search.</string>
    <string name="inst_main1_5">It shows settings view.</string>
    <string name="inst_main1_6">It shows saved content list. Smart Browser can be viewed and saved Web pages stored in the offline environment.</string>
    <string name="inst_main2_1">Smart browser\'s mypage. My favorite item by pressing the sync button, and synchronize your favorites or add a piece of favorite view after, you can share to your friends.</string>
    <string name="inst_main2_2">My page can be shared in the main screen, the screen of the web page can be shared.</string>
    <string name="inst_main2_3">You can adjust the transparency of the remote control when is minimized.</string>
    <string name="inst_input_1">Press here to go to the input of the remote area, you can enter a URL or a search term.</string>
    <string name="inst_input_2">I created a button on the remote control input frequently used terms.</string>
    <string name="inst_input_3">It is Piano Keyboard! The developer of Smart Browser developed before.</string>
    <string name="inst_web1_1">The current web page is refreshed. It is changed the stop button while the page loads.</string>
    <string name="inst_web1_2">It shows settings view.</string>
    <string name="inst_web1_3">It goes to the home activity.</string>
    <string name="inst_web1_4">You can add the favorites and favorite part.</string>
    <string name="inst_web1_5">You can see Web / content / source views. The content is extracted from web page.</string>
    <string name="inst_web1_6">You can add or delete screens.</string>
    <string name="inst_web1_7">No address bar, instead of acting on behalf of the remote control.</string>
    <string name="inst_web2_1">If you touch this, it shows add favorite button, add part button, save button. The favorite is page link. the favorite piece is a piece of web page. the save is the saved contents.</string>
    <string name="inst_web2_2">If you touch this, you can expand selected area.</string>
    <string name="inst_web2_3">If it is selected you want, you can touch this button for entering the title.</string>
    <string name="inst_web2_4">It is the selected area.</string>
    <string name="inst_web3_1">It is content reading mode. It supports the backgrounds, font size, font color, content padding, line space that you select.</string>
    <string name="inst_web3_2">If you touch a word, it shows search/translate layer.</string>
    <string name="inst_web3_3">It shows Google search result.</string>
    <string name="inst_web3_4">You can expand the selected words.</string>
    <string name="inst_web4_1">You can set the values of content reading mode.</string>
    <string name="inst_lockscreen1_1">Double touch, the lock is released.</string>
    <string name="inst_main3_1">It is my Smart Browser mypage.</string>
</resources>
